# text-search

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  download-gutenberg-ebooks.py  long-words.txt
OpenCL-SDK-v2025.07.23-Win-x64/lib/: OpenCLUtilsCpp.lib  OpenCLUtilsCppd.lib  OpenCLUtilsd.lib
benchmark_results/: benchmark_all.csv
data/: 1023.txt  10554.txt  135.txt  1399.txt  145.txt  16119.txt  16389.txt  17135.txt  205.txt  25162.txt  25282.txt  26.txt  26184.txt  2641.txt  26449.txt  27698.txt  3206.txt  33944.txt  36034.txt  37106.txt  394.txt  39459.txt  4085.txt  41445.txt  56517.txt  59386.txt  60230.txt  6593.txt  66957.txt  72679.txt  779.txt  8492.txt  pg77274.txt
doc/: main.bib  main.tex  references.bib
doc/csv/: candidate-openmp-v1-books-common-words.csv  candidate-openmp-v1-books-long-words.csv  candidate-openmp-v1-queries-common-words.csv  candidate-openmp-v1-queries-long-words.csv  candidate-openmp-v2-queries-common-words.csv  candidate-openmp-v2-queries-long-words.csv  candidate-v1-books-common-words.csv  candidate-v1-books-long-words.csv  candidate-v1-queries-long-words.csv  candidate-v2-books-long-words.csv  candidate-v3-books-long-words.csv  candidate-v4-books-long-words.csv  candidate-v4-queries-common-words.csv  candidate-v4-queries-long-words.csv  candidate_mpi-books-common-words.csv  candidate_mpi-books-long-words.csv  candidate_mpi-queries-common-words.csv  candidate_mpi-queries-long-words.csv  candidate_opencl_v1-books-common-words.csv  candidate_opencl_v1-books-long-words.csv  candidate_opencl_v1-queries-common-words.csv  candidate_opencl_v1-queries-long-words.csv  candidate_opencl_v2-books-common-words.csv  candidate_opencl_v2-books-long-words.csv  candidate_opencl_v2-queries-common-words.csv  candidate_opencl_v2-queries-long-words.csv  candidate_opencl_v3-books-common-words.csv  candidate_opencl_v3-books-long-words.csv  candidate_opencl_v3-queries-common-words.csv  candidate_opencl_v3-queries-long-words.csv  candidate_openmp_v2-books-common-words.csv  candidate_openmp_v2-books-long-words.csv  candidate_v1-queries-common-words.csv  candidate_v2-books-common-words.csv  candidate_v2-queries-common-words.csv  candidate_v2-queries-long-words.csv  candidate_v3-books-common-words.csv  candidate_v3-queries-common-words.csv  candidate_v3-queries-long-words.csv  candidate_v4-books-common-words.csv  (+20 more)
include/: cxxopts.hpp
src/: README.md  benchmark.cpp  main.cpp  sequential_text_search.cpp  sequential_text_search.h  sequential_text_search_hash.cpp  sequential_text_search_hash.h  sequential_text_search_std.cpp  sequential_text_search_std.h  test.cpp  timer.cpp  timer.h  util.cpp  util.h
src/candidate/: candidate_text_search.cpp  candidate_text_search.h  candidate_text_search_benchmark.cpp  candidate_text_search_benchmark.h
src/candidate_mpi/: candidate_mpi_text_search.cpp  candidate_mpi_text_search.h
src/candidate_opencl_v1/: README.md  candidate_opencl_v1_text_search.cpp  candidate_opencl_v1_text_search.h  candidate_opencl_v1_text_search_benchmark.cpp  candidate_opencl_v1_text_search_benchmark.h
src/candidate_opencl_v2/: candidate_opencl_v2_text_search.cpp  candidate_opencl_v2_text_search.h  candidate_opencl_v2_text_search_benchmark.cpp  candidate_opencl_v2_text_search_benchmark.h
src/candidate_opencl_v3/: candidate_opencl_v3_text_search.cpp  candidate_opencl_v3_text_search.h
src/candidate_openmp_v1/: candidate_openmp_v1_text_search.cpp  candidate_openmp_v1_text_search.h  candidate_openmp_v1_text_search_benchmark.cpp  candidate_openmp_v1_text_search_benchmark.h
src/candidate_openmp_v2/: candidate_openmp_v2_text_search.cpp  candidate_openmp_v2_text_search.h  candidate_openmp_v2_text_search_benchmark.cpp  candidate_openmp_v2_text_search_benchmark.h
src/candidate_openmpi_v1/: candidate_openmpi_v1_text_search.cpp  candidate_openmpi_v1_text_search.h
src/candidate_v1/: candidate_v1_text_search.cpp  candidate_v1_text_search.h  candidate_v1_text_search_benchmark.cpp  candidate_v1_text_search_benchmark.h
src/candidate_v2/: candidate_v2_text_search.cpp  candidate_v2_text_search.h  candidate_v2_text_search_benchmark.cpp  candidate_v2_text_search_benchmark.h
src/candidate_v3/: candidate_v3_text_search.cpp  candidate_v3_text_search.h  candidate_v3_text_search_benchmark.cpp  candidate_v3_text_search_benchmark.h
src/candidate_v4/: candidate_v4_text_search.cpp  candidate_v4_text_search.h  candidate_v4_text_search_benchmark.cpp  candidate_v4_text_search_benchmark.h
src/direct/: direct_opencl_text_search.cpp  direct_opencl_text_search.h
src/directComp_opencl_v1/: README.md  directComp_opencl_v1_text_search.cpp  directComp_opencl_v1_text_search.h
src/directComp_opencl_v2/: directComp_opencl_v2_text_search.cpp  directComp_opencl_v2_text_search.h
src/directComp_opencl_v3/: directComp_opencl_v3_text_search.cpp  directComp_opencl_v3_text_search.h
src/hash/: hash_text_search.cpp  hash_text_search.h  hash_text_search_benchmark.cpp  hash_text_search_benchmark.h
src/hash_openmp/: hash_openmp_text_search.cpp  hash_openmp_text_search.h
src/hash_openmp_v1/: README.md  hash_openmp_v1_text_search.cpp  hash_openmp_v1_text_search.h
src/hash_v1/: hash_v1_text_search.cpp  hash_v1_text_search.h
src/hash_v2/: hash_v2_text_search.cpp  hash_v2_text_search.h
src/naive_v1/: naive_v1_text_search.cpp  naive_v1_text_search.h
src/sequential/: sequential_text_search.cpp  sequential_text_search.h  sequential_text_search_benchmark.cpp  sequential_text_search_benchmark.h
src/std/: std_text_search.cpp  std_text_search.h  std_text_search_benchmark.cpp  std_text_search_benchmark.h
src/std_openmp/: std_openmp_text_search.cpp  std_openmp_text_search.h
vsssi/: CMakeLists.txt  README.md  main.cpp
